# What2Cook

./: .env.example  .gitignore  Dockerfile  NOTES.md  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 09133480214d_recipe_action.py  6147f96d55f7_anon_user_bookmarks.py  98f077219588_init.py  ca3137948eb4_initial.py
app/: api.py  crud.py  db.py  deps.py  main.py  models.py  schemas.py  templates.py
app/api/: actions.py  recipes.py  search.py
app/frontend/: routes.py
app/models/: __init__.py  anon.py  base.py  ingredient.py  recipe.py
app/schemas/: __init__.py  query.py  recipe.py
app/services/: recipes.py
app/static/css/: custom.css
app/static/js/: actions.js  carousel_swiper.js  clear_anon.js  copy_link.js  search.js
app/templates/: base.html  bookmarks.html  catalog.html  index.html  recipe_detail_page.html  search.html
app/templates/includes/: carousel_index.html  navbar.html  receipt_detail.html
app/utils/: anon_cookie.py  mapping.py  normalize.py  search.py
fixtures/: recipes_fixtures.py
scripts/: fixtures.py
